# ai-textbook

./: .env.example  .gitignore  .npmrc  7DAY_ROADMAP.md  ARCHITECTURE.md  FOLDER_STRUCTURE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SETUP_ORDER.md  TROUBLESHOOTING.md  babel.config.js  deploy-backend.yml  deploy-frontend.yml  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tsconfig.json  tsconfig.node.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  health.py  personalization.py  vector_search.py
backend/app/database/: connection.py  models.py
backend/app/services/: rag.py  vectorization.py
backend/scripts/: __init__.py  vectorize_content.py
