[project]
name = "robotics-textbook-api"
version = "0.1.0"
description = "FastAPI backend for Physical AI & Humanoid Robotics textbook with RAG chatbot"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.0",
]

[[tool.uv.source]]
# Optional: for private packages
name = "pypi"
url = "https://pypi.org/simple"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
